--- a/pom.xml
+++ b/pom.xml
@@ -30,21 +30,40 @@
 		<java.version>17</java.version>
 	</properties>
 	<dependencies>
+    <!-- Spring Boot Starter Web -->
+    	<dependency>
+        	<groupId>org.springframework.boot</groupId>
+        	<artifactId>spring-boot-starter-web</artifactId>
+    	</dependency>
+
+    <!-- Spring Boot Starter Data JPA -->
+    	<dependency>
+        	<groupId>org.springframework.boot</groupId>
+        	<artifactId>spring-boot-starter-data-jpa</artifactId>
+    	</dependency>
+
+    <!-- MySQL Connector/J -->
+    	<dependency>
+        	<groupId>com.mysql</groupId>
+        	<artifactId>mysql-connector-j</artifactId>
+        	<version>8.0.33</version>
+    	</dependency>
+
+		<!-- Spring Boot Starter Test (inclui JUnit 5) -->	
 		<dependency>
     		<groupId>org.springframework.boot</groupId>
-    		<artifactId>spring-boot-starter-web</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter</artifactId>
+    		<artifactId>spring-boot-starter-test</artifactId>
+    		<scope>test</scope>
 		</dependency>
 
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
+    		<groupId>org.springframework.boot</groupId>
+    		<artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
+
+
 	</dependencies>
+
 
 	<build>
 		<plugins>
