--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=projeto
 
-spring.datasource.url=jdbc:mysql://localhost:3306/projeto?useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=12345
+spring.datasource.url=jdbc:mysql://192.168.23.131:3306/projeto?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+spring.datasource.username=appuser
+spring.datasource.password=Senha123!
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
